--- a/src/sass/_FAQs.scss
+++ b/src/sass/_FAQs.scss
@@ -12,7 +12,6 @@
 
     &-text {
       font-size: 6rem;
-      text-transform: uppercase;
       color: $dark-purple;
     }
 
@@ -64,21 +63,6 @@
   }
 }
 
-.FAQs__accordion.open .btn {
+.FAQs__accordion--question.open .btn {
   background-image: url(../../assets/images/icon-minus.svg);
 }
-
-.FAQs__accordion.open .FAQs__accordion--answer {
-  height: 100px;
-}
-
-// .answer {
-//   display: none;
-//   opacity: 0;
-//   transition: opacity 0.2s;
-// }
-
-// .answer.show {
-//   opacity: 1;
-//   display: block;
-// }
