--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -7,6 +7,10 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  @media (max-width: $phone) {
+    padding: 0 2.4rem;
+  }
 }
 
 .ilustration-top {
