--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -4,6 +4,10 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+
+  @media (max-width: $phone) {
+    font-size: 3.2rem;
+  }
 }
 
 .question {
@@ -12,6 +16,10 @@
   font-style: normal;
   font-weight: 600;
   line-height: normal;
+
+  @media (max-width: $phone) {
+    font-size: 1.6rem;
+  }
 }
 .answer {
   color: $pale-purple;
@@ -19,4 +27,8 @@
   font-style: normal;
   font-weight: 400;
   line-height: 150%;
+
+  @media (max-width: $phone) {
+    font-size: 1.4rem;
+  }
 }
