--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -22,4 +22,8 @@ body {
   top: 0;
   left: 0;
   width: 100%;
+
+  @media (max-width: $phone) {
+    background-image: url(../../assets/images/background-pattern-mobile.svg);
+  }
 }
