--- a/src/css/style.css
+++ b/src/css/style.css
@@ -57,6 +57,7 @@ body {
   border-radius: 1.6rem;
   z-index: 999;
   padding: 4rem;
+  box-shadow: 0px 32px 56px 0px rgba(80, 0, 118, 0.1);
 }
 @media (max-width: 31.25em) {
   .FAQs {
